--- a/index.css
+++ b/index.css
@@ -30,7 +30,7 @@ body {
 
 .input {
 	height: 1.5em;
-	padding: 10px;
+    	padding: 18px 10px;
 	width: 100%;
 	font-family: 'Open Sans'!important;
 	border-radius: 2px;
