Alterado :focus do input

--- a/index.css
+++ b/index.css
@@ -30,15 +30,14 @@ body {
 
 .input {
 	height: 1.5em;
-    	padding: 18px 10px;
+	padding: 18px 10px;
 	width: 100%;
 	font-family: 'Open Sans'!important;
-	border-radius: 2px;
 	border: 1px solid black;
 	outline: 1px transparent;
 }
 .input:focus {
-	box-shadow: 0px 0px 5px 1px rgba(0,0,0,0.75);
+	border: 2px solid black;
 }
 
 #res {
